--- a/frontend/src/@core/scss/base/core/mixins/main-menu-mixin.scss
+++ b/frontend/src/@core/scss/base/core/mixins/main-menu-mixin.scss
@@ -156,7 +156,7 @@
 				}
 			}
 			a {
-				color: darken($theme-color, 4.9%);
+				color: $theme-color;
 				padding: $menu-padding;
 				line-height: 1.45;
 
