--- a/frontend/src/@core/scss/base/bootstrap-extended/_variables.scss
+++ b/frontend/src/@core/scss/base/bootstrap-extended/_variables.scss
@@ -158,7 +158,7 @@ $h4-font-size: $font-size-base * 1.286 !default;
 $h5-font-size: $font-size-base * 1.07 !default;
 
 $headings-font-family: inherit !default;
-$headings-color: #5e5873 !default;
+$headings-color: #6e6b7b !default;
 
 $display1-weight: $font-weight-normal !default;
 $display2-weight: $font-weight-normal !default;
