--- a/frontend/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
+++ b/frontend/src/@core/scss/base/core/menu/menu-types/horizontal-menu.scss
@@ -50,8 +50,8 @@
 	//---------------//
 	.horizontal-menu-wrapper {
 		position: fixed;
-		top: 62px;
-		z-index: 990;
+		// top: 62px;
+		// z-index: 990;
 		width: 100%;
 
 		.header-navbar {
@@ -436,7 +436,7 @@
 	// navbar static
 	&.navbar-static {
 		.app-content {
-			padding: calc(#{$content-padding} + #{$horizontal-menu-height}) #{$content-padding} 0 #{$content-padding};
+			// padding: calc(#{$content-padding} + #{$horizontal-menu-height}) #{$content-padding} 0 #{$content-padding};
 		}
 		.content {
 			min-height: calc(100% - calc(#{$horizontal-menu-height} + calc(#{$footer-height} + 0.2rem)));
