--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -45,3 +45,9 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 .deskboard_card_body{
 	padding: 15px;
 }
+.dropdown{
+	display: flex;
+}
+.footer-static{
+	padding: 0 2rem !important;
+}
