--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -51,3 +51,6 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 .footer-static{
 	padding: 0 2rem !important;
 }
+.navbar-nav{
+	align-items: center;
+}
