--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -134,5 +134,13 @@ min-height: 2.45rem !important;
 .product_search_button{
 	width: 27% !important;
 }
-
-
+.rdt_TableRow{
+	position: relative;
+}
+.gIMaKV{
+	overflow: scroll;
+}
+.gIMaKV .gAaLCe{
+	position: sticky !important;
+    left: 0 !important;
+}
