--- a/frontend/src/@core/scss/base/components/demo.scss
+++ b/frontend/src/@core/scss/base/components/demo.scss
@@ -131,3 +131,11 @@
 	height: 160px;
 	width: 300px;
 }
+.image-gallery-left-nav .image-gallery-svg {
+    height: 48px !important;
+    width: 60px !important;
+}
+.image-gallery-right-nav .image-gallery-svg {
+    height: 48px !important;
+    width: 60px !important;
+}
