--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -144,3 +144,21 @@ min-height: 2.45rem !important;
 	position: sticky !important;
     left: 0 !important;
 }
+.model_body{
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+}
+.modal-content{
+	height: 600px !important;
+}
+.lg-img-wrap, .lg-video-loaded{
+	background-color: #000 !important;
+}
+.lg-content{
+	top: 7px !important;
+}
+.lg-thumb-outer{
+	background-color: #000 !important;
+}
