--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -162,3 +162,9 @@ flex-direction: column;
 .lg-thumb-outer{
 	background-color: #000 !important;
 }
+.image_d{
+
+		pointer-events: none;
+		opacity: 0.4;
+
+}
