--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -162,7 +162,7 @@ flex-direction: column;
 .lg-thumb-outer{
 	background-color: #000 !important;
 }
-.image_d{
+.gallary_dissabled{
 
 		pointer-events: none;
 		opacity: 0.4;
