--- a/frontend/src/@core/scss/base/components/demo.scss
+++ b/frontend/src/@core/scss/base/components/demo.scss
@@ -151,3 +151,23 @@
 .tooltip_info{
 	border-radius: 5px;
 }
+.gnahTY{
+	display: flex;
+}
+.react-dataTable{
+	margin-bottom: 40px;
+}
+.rdt_Pagination{
+	position: absolute;
+    bottom: 0;
+}
+.forRdO{
+	position: unset !important;
+}
+.gIMaKV{
+	overflow: none !important;
+}
+.cfhufn{
+	position: sticky !important;
+	left: 0;
+} 
