--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -137,9 +137,9 @@ min-height: 2.45rem !important;
 .rdt_TableRow{
 	position: relative;
 }
-.gIMaKV{
-	overflow: scroll;
-}
+// .gIMaKV{
+// 	// overflow: scroll;
+// }
 .gIMaKV .gAaLCe{
 	position: sticky !important;
     left: 0 !important;
