--- a/frontend/src/@core/scss/base/components/demo.scss
+++ b/frontend/src/@core/scss/base/components/demo.scss
@@ -171,3 +171,12 @@
 	position: sticky !important;
 	left: 0;
 } 
+
+.password-eyes{
+	position: absolute;
+    right: 24px;
+    top: 30px;
+    width: 19px;
+	cursor: pointer;
+
+}
