--- a/frontend/src/@core/scss/base/components/demo.scss
+++ b/frontend/src/@core/scss/base/components/demo.scss
@@ -180,3 +180,10 @@
 	cursor: pointer;
 
 }
+.login-eyes{ 
+	position: absolute;
+    right: 8px;
+    top: 270px;
+    width: 18px;
+    cursor: pointer;
+}
