--- a/frontend/src/@core/scss/base/components/demo.scss
+++ b/frontend/src/@core/scss/base/components/demo.scss
@@ -187,3 +187,19 @@
     width: 18px;
     cursor: pointer;
 }
+.reset-eyes{
+	position: absolute;
+    right: 8px;
+    top: 198px;
+    width: 18px;
+    cursor: pointer;
+}
+.resetConfirm-eyes{
+
+    position: absolute;
+    right: 8px;
+    top: 275px;
+    width: 18px;
+
+    cursor: pointer;
+}
