--- a/frontend/src/@core/scss/base/components/demo.scss
+++ b/frontend/src/@core/scss/base/components/demo.scss
@@ -200,6 +200,22 @@
     right: 8px;
     top: 275px;
     width: 18px;
-
     cursor: pointer;
+}
+// .form-group{
+// 	position: relative;
+// }
+
+.password_login_pass,.password_login_pass.password-reset-eyes, .password_confirm_pass{
+	position: absolute;
+	width: 18px;
+	top: 50%;
+	right: 2%;
+	transform: translateX(-50%);
+	cursor: pointer;
+
+}
+.error-reset-sm{
+	margin: -5px 0 10px 0;
+    color: red;
 }
