--- a/frontend/src/@core/scss/base/components/demo.scss
+++ b/frontend/src/@core/scss/base/components/demo.scss
@@ -206,7 +206,7 @@
 // 	position: relative;
 // }
 
-.password_login_pass,.password_login_pass.password-reset-eyes, .password_confirm_pass{
+.password_login_pass,.password_new_pass, .password_confirm_pass{
 	position: absolute;
 	width: 18px;
 	top: 50%;
