--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -150,9 +150,9 @@ align-items: center;
 justify-content: center;
 flex-direction: column;
 }
-.modal-content{
-	height: 600px !important;
-}
+// .modal-content{
+// 	height: 600px !important;
+// }
 .lg-img-wrap, .lg-video-loaded{
 	background-color: #000 !important;
 }
