--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -19,9 +19,9 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 .react-dataTable  .rdt_TableBody .rdt_TableRow .rdt_TableCell{
 	height: 0 !important;
 }
-.rdt_TableRow:nth-child(even){
-	background-color: #FAFAFA;
-}
+// .rdt_TableRow:nth-child(even){
+// 	background-color: #FAFAFA;
+// }
 #main-menu-navigation .nav-item .nav-link{
 	margin: -10px 0 -10px -14px;
 }
