--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -22,9 +22,9 @@ WE WILL RELEASE FUTURE UPDATES SO IN ORDER TO NOT OVERWRITE YOUR STYLES IT'S BET
 	height: 0 !important;
 }
 
-// .rdt_TableRow:nth-child(even){
-// 	background-color: #FAFAFA;
-// }
+.rdt_TableRow:nth-child(even){
+	background-color: #FAFAFA;
+}
 #main-menu-navigation .nav-item .nav-link {
 	margin: -10px 0 -10px -14px;
 }
@@ -173,6 +173,9 @@ footer.footer {
 // }
 
 .table_height .gIMaKV {
+	height: 200px !important;
+}
+.table_height .iazphd{
 	height: 200px !important;
 }
 
