--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -217,26 +217,47 @@ footer.footer {
 .modal-content {
 	width: 100vw;
 }
-// .card-container {
-// 	height: 500px;
-// }
+.card-container {
+	border: 3px solid #e1e1e1;
+	border-radius: 7px;
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 8px;
+}
 
 .card-container .card {
-	margin-bottom: 8px !important;
+	margin-bottom: 0px !important;
 }
 
 .cardImg img {
-	height: 200px;
-	width: 230px;
+	height: 120px;
+	width: auto;
+	margin-top: 10px;
+}
+
+.cardImg .card-body {
+	padding: 0px;
 }
 .cardImg video {
-	height: 200px;
-	width: 230px;
+	height: 120px;
+	width: 200px;
+	margin-top: 10px;
 }
 .card-body-content {
 	padding: 10px;
 }
 .item-name {
-	height: 40px !important;
+	height: 25px !important;
 	padding: 5px !important;
+}
+
+.remove-btn-image {
+	padding: 7px 8px;
+	
+}
+
+.product-add-img-content{
+	color: white;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	font-size: 14px;
 }
