--- a/frontend/src/assets/scss/style.scss
+++ b/frontend/src/assets/scss/style.scss
@@ -221,6 +221,7 @@ footer.footer {
 	border: 3px solid #e1e1e1;
 	border-radius: 7px;
 	box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 8px;
+	width: 250px;
 }
 
 .card-container .card {
